--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 dotenvy = "0.15.7"
 resend-rs = "0.21.0"
+tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
